--- a/style.css
+++ b/style.css
@@ -157,14 +157,14 @@ i{
         width: 100px;
     }
     h2{
-        font-size: 0.9em;
+        font-size: 1.1em;
     }
     .conteudo{
         display: block;
     }
     #botoes{
         padding-top: 5px;
-        width: 330px;
+        width: auto;
         height: 60px;
         text-align: center;
         border: none;
@@ -187,7 +187,7 @@ i{
     }
 
     #principal{
-        width: 330px;
+        width: auto;
         text-align: start;
     }
     
